2006-03-18  Leonard den Ottolander  <leonard den ottolander nl>

	* extfs/uar.in (mcarfs_list): Parse date reported by ar back to three
	fields as vfs_parse_filedate() only expects three date fields now.

2006-03-08  Pavel Tsekov  <ptsekov@gmx.net>

	* ftpfs.c (ftpfs_dir_load): When retrieving the directory listing
	by using the LIST command _only_ and the output of the command is
	empty, retry the operation by sending a CWD command followed by a
	LIST command.

2006-03-06  Arpad Gereoffy (A'rpi)  <arpi@mplayerhq.hu>

	* ftpfs.c (ftpfs_dir_load): Remove redundant call to
	`ftpfs_translate_path'.

2006-02-23  Pavel Roskin  <proski@gnu.org>

	* Makefile.am: Add fish.h.

2006-02-23  Pavel Tsekov  <ptsekov@gmx.net>

	* fish.h: New file.
	* fish.c (fish_directory_timeout): Define new global variable.
	(FISH_DIRECTORY_TIMEOUT): Eliminate - this macro is not used
	anywhere.
	(fish_dir_load): Use `fish_directory_timeout' to calculate the
	expiration time of a newly created directory entries.

2006-02-23  Pavel Tsekov  <ptsekov@gmx.net>

	* ftpfs.c (ftpfs_dir_uptodate): Remove.
	(init_ftpfs): Adjust the code to reflect the removal of
	`ftpfs_dir_uptodate'.
	* fish.c (fish_dir_uptodate): Remove.
	(init_fish): Adjust the code to reflect the removal of
	`fish_dir_uptodate'.
	* direntry.c (vfs_s_dir_uptodate): New function.
	(vfs_s_init_class): Initialize the `dir_uptodate' field of
	vfs_s_subclass.

2006-02-17  Pavel Tsekov  <ptsekov@gmx.net>

	* ftpfs.c (ftpfs_dir_load): Do not return error on empty directory
	listings if the ftp server indicates that the LIST command completed
	successfully.

2006-02-05  Arpie  <arpi@mplayerhq.hu>

	* ftpfs.c (ftpfs_open_socket): Let the user interrupt ftpfs in
	hostname lookup / connection state.

2006-02-03  Roland Illig  <roland.illig@gmx.de>

	* fish.c: Replaced the printf-like attribute with __printf__,
	since GNU gettext defines a macro printf on some systems.
	* ftpfs.c: Likewise.

2006-01-28  Pavel Tsekov  <ptsekov@gmx.net>
