@@ -1,3 +1,8 @@
+2006-03-19  Leonard den Ottolander  <leonard den ottolander nl>
+
+	* extfs/deb.in: Patrik Rak is mentioned in the header, no need to
+	specify his code blocks in the comments.
+
 2006-03-18  Leonard den Ottolander  <leonard den ottolander nl>
 
 	* extfs/uar.in (mcarfs_list): Parse date reported by ar back to three
